@@ -27,8 +27,8 @@
         <script type="application/javascript" src="tanks.js"></script>
         <script type="application/javascript" src="towers.js"></script>
         <script type="application/javascript" src="miscentity.js"></script>
-        <script type="application/javascript" src="upgrade.js"></script>
         <script type="application/javascript" src="levels.js"></script>
+        <script type="application/javascript" src="data.js"></script>
         <script type="application/javascript" src="loop.js"></script>
     </body>
 </html>
